Fix overflow settings.

--- a/html/500L/static/css/bootstrap.css
+++ b/html/500L/static/css/bootstrap.css
@@ -514,7 +514,7 @@ pre {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
   width: auto;
 }
